RESOLVED FIXED301112
[WebKit] Fix availability versions for 26.0 releases
https://bugs.webkit.org/show_bug.cgi?id=301112
Summary [WebKit] Fix availability versions for 26.0 releases
Elliott Williams
Reported 2025-10-20 11:41:49 PDT
Mechanically replace TBA macros with release versions, for API changes that shipped in these releases.
Attachments
Elliott Williams
Comment 1 2025-10-20 11:41:50 PDT
Elliott Williams
Comment 2 2025-10-20 11:42:48 PDT
EWS
Comment 3 2025-10-20 15:42:22 PDT
Committed 301829@main (29ac5afaaff2): <https://commits.webkit.org/301829@main> Reviewed commits have been landed. Closing PR #52668 and removing active labels.
EWS
Comment 4 2025-10-20 19:49:12 PDT
Committed 301765.55@safari-7623-branch (f426f3e48b4e): <https://commits.webkit.org/301765.55@safari-7623-branch> Reviewed commits have been landed. Closing PR #3817 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.