[WebKit] Fix availability versions for 26.0 releases https://bugs.webkit.org/show_bug.cgi?id=301112 rdar://153670232

Reviewed by Wenson Hsieh.

Mechanically replace TBA macros with release versions, for API changes
that shipped in these releases.

* Source/WebKit/Shared/API/Cocoa/_WKHitTestResult.h:
* Source/WebKit/UIProcess/API/Cocoa/WKPreferencesPrivate.h:
* Source/WebKit/UIProcess/API/Cocoa/WKUIDelegate.h:
* Source/WebKit/UIProcess/API/Cocoa/WKUIDelegatePrivate.h:
* Source/WebKit/UIProcess/API/Cocoa/WKWebView.h:
* Source/WebKit/UIProcess/API/Cocoa/WKWebViewPrivate.h:
* Source/WebKit/UIProcess/API/Cocoa/_WKInputDelegate.h:
* Source/WebKit/_WebKit_SwiftUI/API/View+WebViewModifiers.swift:

Canonical link: https://commits.webkit.org/301829@main